--- a/History.txt
+++ b/History.txt
@@ -1,6 +1,11 @@
-=== 1.0.0 / 2009-02-08
+=== 0.0.2 / 2009-04-04
+
+* Light house-keeping.
+* Merged changes by Michael Kohl (http://citizen428.net)
+* Added RubyCocoa source package and installation task.
+
+=== 0.0.1 / 2009-02-08
 
 * 1 major enhancement
 
   * Birthday!
-
