Updated History and Rakefile

--- a/History
+++ b/History
@@ -1,13 +1,14 @@
 === 0.0.3 / 2009-10-19
 
 * Added install-cocoa script.
-* Moved to Jeweler for package/project management
+* Moved to jeweler for package/project management
   (http://github.com/technicalpickles/jeweler)
 * Added support for file:// urls - thanks to Joel Chippindale
   (http://blog.monkeysthumb.org) 
 * Added dependency to thoughtbot-shoulda 
   (http://thoughtbot.com/projects/shoulda)
 * Gem name is now jurisgalang-snapurl
+* No longer uses Hoe
 
 === 0.0.2 / 2009-04-04
 
